--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <tr>
 
 <td>
-<img src=" /storage/emulated/0/Download/Sundar_Pichai_WEF_2020.png   ">
+<img src="Sundar_Pichai_WEF_2020.png   ">
 
 </td>
 <td> 
@@ -37,7 +37,7 @@
 	  <li><a href="www.youtube.com"> <b>cricket</b></a></li>
 	  <li><a href="www.youtube.com"> <b>hockey</b></a></li>
 	  <li><a href="www.youtube.com"> <b>pubg</b></a></li>
-	  <li><a href="/storage/emulated/0/AppProjects/link/2.html"> <b>cod</b></a></li>
+	  <li><a href="2.html"> <b>cod</b></a></li>
 
 
 
