--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 	<h3>Favourite Sports</h3>
 
 	<ol>
-	  <li><a href="https://gsuite.google.com/marketplace/app/yt_tracker_youtube_stats_analytics/952783286913"     > <b>cricket</b></a></li>
-	  <li><a href="www.youtube.com"> <b>hockey</b></a></li>
-	  <li><a href="www.youtube.com"> <b>pubg</b></a></li>
-	  <li><a href="2.html"> <b>cod</b></a></li>
+	  <li> <a href="https://gsuite.google.com/marketplace/app/yt_tracker_youtube_stats_analytics/952783286913"     > <b>cricket</b></a></li>
+	  <li> <a href="https://www.youtube.com"> <b>hockey</b></a></li>
+	  <li> <a href="https://www.youtube.com"> <b>pubg</b></a></li>
+	  <li> <a href="2.html"> <b>cod</b></a></li>
 
 
 
